--- a/styles.css
+++ b/styles.css
@@ -61,16 +61,21 @@ img {
     font-weight: lighter;
 }
 
-.profile-stats ul{
+ul{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin-top: 40px;
     margin-bottom: 40px;
+    list-style: none;
 }
 
-ul li{
-    list-style-type: none;
-}
 .profile-stat-count{
     font-weight: bold;
+}
+
+.gallery{
+    display: grid;
+    grid-template-columns: repeat (3, 1fr);
+    gap: 5px;
+    width: 100px;
 }
