--- a/styles.css
+++ b/styles.css
@@ -61,9 +61,9 @@ img {
     font-weight: lighter;
 }
 
-ul{
+.profile-stats ul{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-top: 40px;
     margin-bottom: 40px;
     list-style: none;
@@ -76,6 +76,17 @@ ul{
 .gallery{
     display: grid;
     grid-template-columns: repeat (3, 1fr);
-    gap: 5px;
-    width: 100px;
+    margin-left: 120px;
+    margin-right: 120px;
+    margin-bottom: 20px;
+    gap: 20px;
+}
+
+.gallery-item-info ul{
+    display: flex;
+    list-style: none;
+}
+
+.visually-hidden{
+    visibility: hidden;
 }
