Update width and height of grid images

--- a/styles.css
+++ b/styles.css
@@ -20,14 +20,15 @@ body {
 
 img {
     display: block;
-    width: 200px;
-    height: 200px;
+    width: 280px;
+    height: 320px;
 }
 
 .profile img{
     border-radius: 50%;
     border: 10px solid #2d6a4f;
-    width: 270px;
+    width: 260px;
+    Height: 250px;
 }
 
 .profile{
