--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,7 @@ img {
     margin-bottom: 20px;
     justify-items: center;
     align-items: center;
+    gap: 10px;
 }
 
 .gallery-item{
@@ -95,13 +96,23 @@ img {
 
 .gallery-item-info{
     position: absolute;
-    top: 150px;
+    top: 180px;
+    color: #fafafa;
+    background: rgba(0, 0, 0, 0.6);
+    opacity: 0;
+    
+}
+
+.gallery-item:hover .gallery-item-info{
+    opacity: 1;
 }
 
 .gallery-item-info ul{
     display: flex;
     list-style: none;
 }
+
+
 
 .visually-hidden{
     visibility: hidden;
